--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "node": ">= 0.6.0"
   },
   "scripts": {
-    "test": "exit 0"
+    "test": "mocha"
   },
   "devDependencies": {
     "grunt": "~0.3.17"
